user.clj, test_storage, default file-storage, validate-storage