@@ -3,4 +3,4 @@ set -o errexit -o nounset -o pipefail
 cd "`dirname $0`/.."
 
 echo "Starting Socket REPL server on port 5555"
-clj -A:test:bench -J--add-opens=java.base/java.io=ALL-UNNAMED -X clojure.core.server/start-server :name repl :port 5555 :accept clojure.core.server/repl :server-daemon false
+clj -A:dev:test:bench -X clojure.core.server/start-server :name repl :port 5555 :accept clojure.core.server/repl :server-daemon false
